finished task two to the best of my ability; need to print output in binary